# booking-agent

./: .gitignore  observations.md  pyproject.toml  requirements.txt
booking_agent/: antibot.py  browser.py  cli.py  config.py
booking_agent/auth/: gmail_otp.py  login.py  tools.py  vision.py
booking_agent/models/: message.py  rate.py  reservation.py  stats.py
booking_agent/modules/: availability.py  messages.py  performance.py  pricing.py  reservations.py  smart_reply.py
booking_agent/utils/: output.py  selectors.py  waits.py
state/: session.json
